--- a/config/cable.yml
+++ b/config/cable.yml
@@ -8,4 +8,5 @@ test: *redis
 
 production:
   adapter: redis
-  url: <%= ENV["REDIS_URL"] %>
+  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
+  # channel_prefix: gorg_soa_supervision_rails5_production
